usr/src/uts/common/fs/zfs/vdev_disk.c
@@ -24,6 +24,7 @@
  * Copyright 2016 Nexenta Systems, Inc.  All rights reserved.
  * Copyright 2020 Joyent, Inc.
  * Copyright 2020 Joshua M. Clulow <josh@sysmgr.org>
+ * Copyright 2022 Tintri by DDN, Inc. All rights reserved.
  */
 
 #include <sys/zfs_context.h>
@@ -353,10 +354,11 @@ vdev_disk_open(vdev_t *vd, uint64_t *psize, uint64_t *max_psize,
 	if (vd->vdev_devid != NULL) {
 		if (ddi_devid_str_decode(vd->vdev_devid, &dvd->vd_devid,
 		    &dvd->vd_minor) != 0) {
-			vd->vdev_stat.vs_aux = VDEV_AUX_BAD_LABEL;
-			vdev_dbgmsg(vd, "vdev_disk_open: invalid "
-			    "vdev_devid '%s'", vd->vdev_devid);
-			return (SET_ERROR(EINVAL));
+			vdev_dbgmsg(vd,
+			    "vdev_disk_open, invalid devid %s bypassed",
+			    vd->vdev_devid);
+			spa_strfree(vd->vdev_devid);
+			vd->vdev_devid = NULL;
 		}
 	}
 
